add some more scenario ideas

--- a/Kubernetes Security Best Practices Whitepaper 2023/Auditing/kind-config.yaml
+++ b/Kubernetes Security Best Practices Whitepaper 2023/Auditing/kind-config.yaml
@@ -1,9 +1,10 @@
 ---
 kind: Cluster
 apiVersion: kind.x-k8s.io/v1alpha4
+name: auditing-cluster
 nodes:
   - role: control-plane
-    image: kindest/node:v1.25.11
+    image: kindest/node:v1.26.6
     kubeadmConfigPatches:
       - |
         kind: ClusterConfiguration
@@ -31,4 +32,4 @@ nodes:
         containerPath: /etc/kubernetes/policies/audit-policy.yaml
         readOnly: true
   - role: worker
-    image: kindest/node:v1.25.11
+    image: kindest/node:v1.26.6
